--- a/client/styles/sass/_header.scss
+++ b/client/styles/sass/_header.scss
@@ -55,6 +55,5 @@
 }
 .navbar-default .navbar-collapse {
   margin-left: 5%;
-  float: left;
   background-color: transparent;
 }
