--- a/client/styles/sass/_responsive.scss
+++ b/client/styles/sass/_responsive.scss
@@ -60,6 +60,7 @@
     }
     .navbar-default {
       .navbar-collapse {
+        overflow-y: hidden;
         margin-top: 4px;
         margin-left: -15px;
         float: none;
